--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -193,9 +193,201 @@ a:hover {
     border-radius: 5px;
 }
 
+.Head {
+    margin: 0;
+    font-family: "h1Font", Arial, sans-serif;
+    font-weight: 700px;
+    font-size: 50px;
+    letter-spacing: 2px;
+    line-height: 120px;
+    text-transform: uppercase;
+    color: #f589e9;
+}
+
+.Subhead {
+    margin: 0;
+    color: rgb(239, 85, 108);
+    font-family: "Montserrat", Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+/*BLOG SECTION START HERE*/
+:root {
+    --container-color: #1a1e21;
+    --second-color: #e75168;
+    --text-color: white;
+    --bg-color: #091428;
+}
+
+/*Filter Section CSS */
+.post-filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 2rem !important;
+}
+.filter-item {
+    font-family: "headbarFont";
+    text-decoration: none;
+    color: #e9e9ff;
+    font-size: 1.1rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.active-filter {
+    background: #e75168;
+    color: white;
+    padding: 4px 10px;
+    border-radius: 4px;
+}
+
+/*Posts */
+.post {
+    display: grid;
+    padding: 48px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.post-box {
+    background: #1d202b;
+    box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
+    padding: 15px;
+    border-radius: 0.5rem;
+}
+.post-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 0.5rem;
+}
+.category {
+    font-size: 0.9rem;
+    color: rgb(239, 85, 108);
+    font-family: "Montserrat", Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 28px;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.post-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-family: "h1Font", Arial, sans-serif;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.3rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #f589e9;
+}
+.post-date {
+    display: flex;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    font-family: "textFont";
+    font-weight: 400;
+    margin-top: 4px;
+}
+.post-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+    margin: 5px 0 10px;
+    font-size: 18px;
+    font-weight: 400px;
+    font-family: "textFont";
+}
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.profile-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: 2px solid #e75168;
+}
+.profile-name {
+    font-size: 0.85rem;
+    font-weight: 500;
+}
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 48px;
+}
+.footer p {
+    font-size: 0.938rem;
+}
+.social {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.social .bx {
+    font-size: 1.4rem;
+    color: #e9e9ff;
+}
+.social .bx:hover {
+    color: #e75168;
+    transition: 0.3s all linear;
+}
+
+.buttonPrimary {
+    display: inline-block;
+    padding: 19px 34px;
+    background-color: #1c1a24;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.buttonPrimary:hover {
+    background-color: #f589e9;
+    color: #091428;
+}
+
+.buttonPrimary {
+    display: inline-block;
+    padding: 19px 34px;
+    background-color: #1c1a24;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.buttonPrimary:hover {
+    background-color: #f589e9;
+    color: #091428;
+}
 .main2 h2,
 .main3 h2,
-.popular-content h2,
 .FRQ h2 {
     margin: 0;
     font-family: "h1Font", Arial, sans-serif;
@@ -209,7 +401,6 @@ a:hover {
 
 .main2 h3,
 .main3 h3,
-.popular-content h3,
 .FRQ h3 {
     margin: 0;
     color: rgb(239, 85, 108);
